--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,38 @@
-# Ignore virtual environments
-lab1/venv/
-
-# Ignore Python junk
+# Python
 __pycache__/
 *.py[cod]
-*.sqlite3
+*.pyc
+*.so
+*.egg
+*.egg-info/
+*.pyo
 
-# VSCode (optional)
+# Django DB
+db.sqlite3
+
+# Environment
+venv/
+env/
+ENV/
+.venv/
+*.env
+
+# IDE/editor
 .vscode/
+.idea/
+*.swp
+
+# OS files
+.DS_Store
+Thumbs.db
+
+# Static/media (optional if large)
+staticfiles/
+media/
+
+# Migrations (optional if you don’t want history)
+**/migrations/*.py
+!**/migrations/__init__.py
+
+# Pytest cache
+.pytest_cache/
